Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33057

PySide6 installation proposal is missing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 17.0.0
    • Python Support
    • None
    • Creator 17.0.0 + PySide 6.9.1.
    • 975eaa91e (master)

      Test steps:
      1. Install Creator and PySide via the Online Installer tool
      2. Open the file QtForPython\6.9.1\Src\examples\examples.pyproject
      3. Configure project to use Python virtual environment
      4. Run the project
       
      Result:
      Running the app fails because PySide6 is not installed. After step 3, Creator should prompt the user to install PySide6.

        1. image-2025-07-29-11-32-17-490.png
          107 kB
          Jukka Nokso
        2. image-2025-07-29-11-32-45-020.png
          75 kB
          Jukka Nokso
        3. image-2025-09-11-14-07-24-951.png
          83 kB
          Jukka Nokso
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            jukkanokso Jukka Nokso
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes