Python: improve missing pyside handling

Fixes: QTCREATORBUG-33057
Change-Id: I41fca7728c10fbf512b383cf04c4b3dacdb536ac
Reviewed-by: Christian Stenger <christian.stenger@qt.io>